--- a/src/app/views/pages/hability/hability.component.html
+++ b/src/app/views/pages/hability/hability.component.html
@@ -1,1 +1,29 @@
-<p>hability works!</p>
+<div class="wrap-skills">
+  <br>
+  <h2>Proyectos terminados</h2>
+  <br>
+  <div class="wrap-skill-card">
+    <p class="app-name">Meeting Studio</p>
+    <p class="desc">Una app de transmisión de medios sensilla hecha con ElectronJs y Angular para eventos de bajo perfil.</p>
+  </div>
+  <br>
+  <div class="wrap-skill-card">
+    <p class="app-name">Meeting Studio</p>
+    <p class="desc">Una app de transmisión de medios sensilla hecha con ElectronJs y Angular para eventos de bajo perfil.</p>
+  </div>
+
+  <br><br>
+
+  <h2>Estudios previos terminados</h2>
+
+  <div class="wrap-skill-card">
+    <p class="app-name">Meeting Studio</p>
+    <p class="desc">Una app de transmisión de medios sensilla hecha con ElectronJs y Angular para eventos de bajo perfil.</p>
+  </div>
+  <br>
+  <div class="wrap-skill-card">
+    <p class="app-name">Meeting Studio</p>
+    <p class="desc">Una app de transmisión de medios sensilla hecha con ElectronJs y Angular para eventos de bajo perfil.</p>
+  </div>
+
+</div>
