--- a/src/app/views/pages/home/home.component.html
+++ b/src/app/views/pages/home/home.component.html
@@ -6,4 +6,4 @@
 </div>
 <app-card [data]="cardData"></app-card>
 <br /><br />
-<app-dinamic-hero></app-dinamic-hero>
+<!-- <app-dinamic-hero [dinamicHeroData]="dinamicHeroData"></app-dinamic-hero> -->
