--- a/src/app/shared/card/card-edit-dialog/card-edit-dialog.component.scss
+++ b/src/app/shared/card/card-edit-dialog/card-edit-dialog.component.scss
@@ -7,8 +7,9 @@ img {
   border-radius: 8px;
   border: 2px dashed white;
 }
+
 .dialog-container {
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   padding: 24px;
