--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,27 +2,23 @@
   <header class="desk">
     <div class="hr-contnet">
       <div class="wrap">
-        <p class="logo-title">Diego <span>Carbone</span></p>
+        <img height="40%" [src]="argentinaProgramaLogoUrl" alt="" />
+        <!-- &nbsp;&nbsp;
+        <p class="logo-title">Diego <span>Carbone</span></p> -->
       </div>
 
       <div class="wrap">
-        <!-- <img src="assets/Logo.svg" alt=""> -->
         <div class="nav-region">
           <button
             *ngFor="let item of navItems"
             class="tab-button"
-
-
             [routerLink]="item.path"
             routerLinkActive="selected"
-
-
           >
-
             <mat-icon
               class="material-symbols-rounded"
               routerLinkActive="material-symbols-fill"
-              >{{item.icon}}</mat-icon
+              >{{ item.icon }}</mat-icon
             >
             {{ item.text }}
           </button>
@@ -50,6 +46,7 @@
       </div>
     </div>
   </header>
+
   <header class="mobile">
     <div class="hr-contnet">
       <div class="wrap">
@@ -83,18 +80,8 @@
   </header>
   <div class="pseudonav"></div>
 
-  <aside [class.sidenav-opened]="sidenavStatus">
-    <div class="wrap-sidenav">
-      <div class="sidenav-header">
-        <button
-          mat-icon-button
-          class="menu-btn"
-          (click)="changeSidenavStatus()"
-        >
-          <mat-icon class="material-symbols-rounded">menu</mat-icon>
-        </button>
-        <p>MENU</p>
-      </div>
+  <mat-drawer-container class="example-container">
+    <mat-drawer mode="over" [opened]="sidenavStatus">
       <div class="sidenav-items">
         <button
           mat-ripple
@@ -110,11 +97,28 @@
           >
           <p>{{ item.text }}</p>
         </button>
+      </div></mat-drawer
+    >
+    <mat-drawer-content>
+      <div class="content">
+        <ng-content></ng-content>
+      </div>
+    </mat-drawer-content>
+  </mat-drawer-container>
+
+
+  <!-- <aside [class.sidenav-opened]="sidenavStatus">
+    <div class="wrap-sidenav">
+      <div class="sidenav-header">
+        <button
+          mat-icon-button
+          class="menu-btn"
+          (click)="changeSidenavStatus()"
+        >
+          <mat-icon class="material-symbols-rounded">menu</mat-icon>
+        </button>
+        <p>MENU</p>
       </div>
     </div>
-  </aside>
-
-  <div class="content">
-    <ng-content></ng-content>
-  </div>
+  </aside> -->
 </main>
