--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,83 +8,100 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
 header {
   position: fixed;
   background-color: var(--header-surface);
-  backdrop-filter: saturate(200%) blur(20px);
+  backdrop-filter: saturate(200%) blur(50px);
   border-bottom: 1px solid var(--header-border-color);
 
   z-index: 5;
 }
-aside {
-  width: 70%;
-  height: 100vh;
-  max-width: 255px;
-  position: fixed;
-  z-index: 6;
-  top: 0;
-  transform: translateX(-100%);
-  transition: all 0.5s cubic-bezier(0, 1.02, 0, 1.01) !important;
-  border-right: 1px solid var(--header-border-color);
-  backdrop-filter: saturate(2) blur(50px);
+.sidenav-items {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
 
-  .wrap-sidenav {
-    background-color: var(--header-surface);
+  .nav-btn {
+    padding: 0 20px;
+    box-sizing: border-box;
     width: 100%;
-    height: 100%;
-    p {
-      font-size: 16px;
-      margin: 0;
-      font-weight: bold;
-      color: var(--sidenav-foreground);
-    }
-    mat-icon {
-      color: var(--sidenav-foreground);
-    }
-
-    .sidenav-header {
-      width: 100%;
-      height: 56px;
-      padding: 0 8px;
-      box-sizing: border-box;
-      display: flex;
-      align-items: center;
-      gap: 11px;
-    }
-    .sidenav-items {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-
-      .nav-btn {
-        padding: 0 20px;
-        box-sizing: border-box;
-        width: 100%;
-        height: 56px;
-        display: flex;
-        align-items: center;
-        gap: 24px;
-        background: none;
-        border: none;
-      }
-    }
-  }
-  &.sidenav-opened {
-    transform: translateX(0);
-    transition: all 0.3s;
-  }
-  &::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    opacity: 85%;
-    background-image: $method-1-acrylic-noise-texture;
-    background-attachment: fixed;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    background: none;
+    border: none;
   }
 }
+// aside {
+//   width: 70%;
+//   height: 100vh;
+//   max-width: 255px;
+//   position: fixed;
+//   z-index: 6;
+//   top: 0;
+//   transform: translateX(-100%);
+//   transition: all 0.5s cubic-bezier(0, 1.02, 0, 1.01) !important;
+//   border-right: 1px solid var(--header-border-color);
+//   backdrop-filter: saturate(2) blur(50px);
+
+//   .wrap-sidenav {
+//     background-color: var(--header-surface);
+//     width: 100%;
+//     height: 100%;
+//     p {
+//       font-size: 16px;
+//       margin: 0;
+//       font-weight: bold;
+//       color: var(--sidenav-foreground);
+//     }
+//     mat-icon {
+//       color: var(--sidenav-foreground);
+//     }
+
+//     .sidenav-header {
+//       width: 100%;
+//       height: 56px;
+//       padding: 0 8px;
+//       box-sizing: border-box;
+//       display: flex;
+//       align-items: center;
+//       gap: 11px;
+//     }
+//     .sidenav-items {
+//       width: 100%;
+//       display: flex;
+//       flex-direction: column;
+
+//       .nav-btn {
+//         padding: 0 20px;
+//         box-sizing: border-box;
+//         width: 100%;
+//         height: 56px;
+//         display: flex;
+//         align-items: center;
+//         gap: 24px;
+//         background: none;
+//         border: none;
+//       }
+//     }
+//   }
+//   &.sidenav-opened {
+//     transform: translateX(0);
+//     transition: all 0.3s;
+//   }
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     left: 0;
+//     right: 0;
+//     top: 0;
+//     right: 0;
+//     height: 100%;
+//     width: 100%;
+//     z-index: -1;
+//     opacity: 85%;
+//     background-image: $method-1-acrylic-noise-texture;
+//     background-attachment: fixed;
+//   }
+// }
 
 .pseudonav {
   width: 100%;
@@ -279,6 +296,7 @@ main {
         bottom: 0;
         transition: all 0.2s;
         margin: auto;
+        border-radius: 50px;
       }
       &::after {
         content: "";
@@ -288,6 +306,7 @@ main {
         bottom: 0;
         transition: all 0.2s;
         background-color: var(--color-primary);
+        border-radius: 50px;
       }
 
       &:hover {
@@ -311,7 +330,7 @@ main {
           bottom: 0;
           transition: all 0.2s;
           background-color: var(--color-primary);
-          box-shadow: 0 0 15px var(--color-primary);
+          // box-shadow: 0 0 15px var(--color-primary);
         }
       }
     }
@@ -320,5 +339,6 @@ main {
     width: 100%;
     overflow: hidden;
     animation: startAnimation 0.5s;
+    background-color: var(--body-surface);
   }
 }
