--- a/src/app/views/admin/start-page/start-page.component.html
+++ b/src/app/views/admin/start-page/start-page.component.html
@@ -1,6 +1,20 @@
 <div class="wrap-start-page">
   <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" dynamicHeight>
     <mat-tab label="Hero princpial">
+
+
+
+      <button
+        (click)="saveDataHero()"
+        mat-fab
+        color="primary"
+        class="save-button"
+      >
+        <mat-icon>save</mat-icon>
+      </button>
+
+
+
       <div class="outline"></div>
       <br /><br />
       <div class="input-container">
@@ -45,15 +59,11 @@
     <mat-tab label="Cards">
       <div class="outline"></div>
       <br /><br /><br />
-      <app-card (saveNewCard)="saveDataCard($event)" [editMode]="true" [data]="cardData"></app-card>
-    </mat-tab>
-    <mat-tab label="Hero secundario">
-      <div class="outline"></div>
-      Content 3
-    </mat-tab>
-    <mat-tab label="Footer">
-      <div class="outline"></div>
-      Content 3
+      <app-card
+        (saveNewCard)="saveDataCard($event)"
+        [editMode]="true"
+        [data]="cardData"
+      ></app-card>
     </mat-tab>
   </mat-tab-group>
 </div>
