--- a/src/app/views/admin/start-page/start-page.component.scss
+++ b/src/app/views/admin/start-page/start-page.component.scss
@@ -1,3 +1,9 @@
+.save-button{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 4;
+}
 :ng-deep{
   .mat-mdc-tab-labels{
     border-bottom: 1px solid red;
@@ -6,7 +12,7 @@
 .outline{
   width: 100%;
   height: 1px;
-  background-color: rgba(143, 143, 143, 0.299)
+  background-color: #8f8f8f4c
 }
 .wrap-start-page {
   animation: startAnimation 0.3s;
