--- a/src/app/views/auth/login/login.component.scss
+++ b/src/app/views/auth/login/login.component.scss
@@ -3,7 +3,9 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
 .card-login {
   width: 100%;
 }
-
+mat-icon{
+  color: var(--foreground-color);
+}
 .wrap-login {
   width: 100vw;
   display: flex;
@@ -72,39 +74,42 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
         position: relative;
         margin-top: 25px;
 
-        input,
-        select {
+        mat-form-field{
           width: 100%;
-          padding: 12px 20px;
-          margin: 8px 0;
-          display: inline-block;
-          border: none;
-          background: var(--input-background-default);
-          border-radius: 4px;
-          color: var(--foreground-color);
-          font-size: 14px;
-          box-sizing: border-box;
-          outline: none;
-          border-bottom: 2px solid var(--input-background-default);
-          margin-bottom: 20px;
-          transition: all 0.3s;
-
-          &::placeholder {
-            color: gray;
-          }
-
-          &:focus {
-            background-color: #3c80ff10;
-            border-bottom: 2px solid #1E67D6;
-            transition: all 0.3s;
-            // box-shadow: 0 0 50px px #1E67D6;
-
-            &::placeholder {
-              color: var(--foreground-color);
-              opacity: 50%;
-            }
-          }
         }
+        // input,
+        // select {
+        //   width: 100%;
+        //   padding: 12px 20px;
+        //   margin: 8px 0;
+        //   display: inline-block;
+        //   border: none;
+        //   background: var(--input-background-default);
+        //   border-radius: 4px;
+        //   color: var(--foreground-color);
+        //   font-size: 14px;
+        //   box-sizing: border-box;
+        //   outline: none;
+        //   border-bottom: 2px solid var(--input-background-default);
+        //   margin-bottom: 20px;
+        //   transition: all 0.3s;
+
+        //   &::placeholder {
+        //     color: gray;
+        //   }
+
+        //   &:focus {
+        //     background-color: #3c80ff10;
+        //     border-bottom: 2px solid #1E67D6;
+        //     transition: all 0.3s;
+        //     // box-shadow: 0 0 50px px #1E67D6;
+
+        //     &::placeholder {
+        //       color: var(--foreground-color);
+        //       opacity: 50%;
+        //     }
+        //   }
+        // }
       }
     }
     .btn-container {
@@ -195,40 +200,6 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
             width: 100%;
             position: relative;
             margin-top: 25px;
-
-            input[type="text"],
-            select {
-              width: 100%;
-              padding: 12px 20px;
-              margin: 8px 0;
-              display: inline-block;
-              border: none;
-              background: var(--input-background-default);
-              border-radius: 4px;
-              color: var(--foreground-color);
-              font-size: 14px;
-              box-sizing: border-box;
-              outline: none;
-              border-bottom: 2px solid transparent;
-              margin-bottom: 20px;
-              transition: all 0.3s;
-
-              &::placeholder {
-                color: gray;
-              }
-
-              &:focus {
-                background-color: #3c80ff10;
-                border-bottom: 2px solid #1E67D6;
-                transition: all 0.3s;
-                // box-shadow: 0 0 50px px #1E67D6;
-
-                &::placeholder {
-                  color: var(--foreground-color);
-                  opacity: 50%;
-                }
-              }
-            }
           }
         }
         .btn-container {
