--- a/src/app/views/pages/pages.component.html
+++ b/src/app/views/pages/pages.component.html
@@ -1,5 +1,5 @@
 <app-header>
   <router-outlet></router-outlet>
   <br /><br /><br /><br />
-  <app-footer></app-footer>
+  <app-footer [footerData]="footerData"></app-footer>
 </app-header>
