--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -40,6 +40,8 @@
 
   --admin-back:var(--color-step-1000);
 
+  --mat-drawer-surface:#ffffff;
+
   --hero-surface: var(--color-step-950);
 
   --foreground-color: var(--color-step-50);
@@ -47,7 +49,7 @@
   --foreground-color-200: var(--color-step-200);
   --foreground-color-250: var(--color-step-450);
 
-  --input-border-default: var(--color-step-650);
+  --input-border-default: var(--color-step-750);
 
   /* Login */
   --card-login-back:var(--color-step-950);
@@ -57,10 +59,9 @@
 }
 .dark {
   --color-primary-font: #ffc5a4;
-  --header-surface: #161616cc;
-  --body-surface: var(--color-step-50);
+  --header-surface: #101010cc;
+  --body-surface: #171717;
   --logotype-font-color: var(--color-step-1000);
-  --header-border-color: #3535352f;
   --hero-surface: var(--color-step-200);
   --header-hover-tab: var(--color-step-250);
   --sidenav-surface:var(--color-step-50);
@@ -68,19 +69,21 @@
 
   --admin-back:var(--color-step-100);
 
+  --mat-drawer-surface:#303030;
+
   --foreground-color: var(--color-step-1000);
   --on-foreground-color: var(--color-step-50);
   --foreground-color-200: var(--color-step-750);
   --foreground-color-250: var(--color-step-700);
 
-  --input-border-default: var(--color-step-650);
+  --input-border-default: var(--color-step-200);
   --input-border-default-200: var(--color-step-350);
 
   /* Login */
   --card-login-back:var(--color-step-50);
   --login-blur-background:#000000b9;
   --login-background:url("../assets/resources/pictures/macOS-Monterey-wallpaper-idownloadblog-mattbirchler-variant-2-blue-green-dark-min.webp");
-  --admin-background:#303030;
+  --admin-background:var(--body-surface);
 
 
 }
