--- a/src/app/views/admin/about-page/about-page.component.html
+++ b/src/app/views/admin/about-page/about-page.component.html
@@ -1,10 +1,10 @@
 <form class="example-form" [formGroup]="aboutMeContent">
-  <mat-form-field class="example-full-width">
+  <mat-form-field class="example-full-width" appearance="outline">
     <mat-label>Titulo</mat-label>
     <input formControlName="title" matInput placeholder="Inserte Titulo">
   </mat-form-field>
 
-  <mat-form-field class="example-full-width" >
+  <mat-form-field class="example-full-width" appearance="outline">
     <mat-label>Descripcion</mat-label>
     <textarea formControlName="descript" style="height: 300px; max-height: 70vh;" matInput placeholder="Inserte descripción"></textarea>
   </mat-form-field>
