--- a/src/app/views/pages/about/about.component.html
+++ b/src/app/views/pages/about/about.component.html
@@ -14,6 +14,6 @@
 
   <span>
     <h1>{{ aboutContent.title }}</h1>
-    <pre>{{ aboutContent.paragraph }}</pre>
+    <p>{{ aboutContent.paragraph }}</p>
   </span>
 </main>
