--- a/src/app/views/pages/about/about.component.scss
+++ b/src/app/views/pages/about/about.component.scss
@@ -22,7 +22,7 @@ main {
       font-family: "Product Sans Thin Regular";
     }
 
-    pre {
+    p {
       line-height: 1.5;
       font-size: 18px;
       overflow-wrap: break-word;
@@ -37,7 +37,7 @@ main {
       h1 {
         font-size: 50px;
       }
-      pre {
+      p {
         font-size: 25px;
       }
     }
@@ -70,7 +70,7 @@ main {
         font-size: 50px;
         margin-top: 0;
       }
-      pre {
+      p {
         font-size: 25px;
         max-width: 800px;
       }
