--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,20 +1,20 @@
 <div class="card-container">
   <div class="card-group">
     <article mat-ripple (click)="editCard(0)">
-      <img [src]="cards[0]?.picture" [alt]="cards[0]?.title" />
+      <img [src]="cards[0]?.picture ?? 'assets/resources/pictures/img-404-card.svg'" [alt]="cards[0]?.title" />
       <span>
-        <h3>{{ cards[0]?.title }}</h3>
-        <p>{{ cards[0]?.desc }}</p>
+        <h3>{{ cards[0]?.title ?? "Titulo" }}</h3>
+        <p>{{ cards[0]?.desc ?? "Descripción"}}</p>
         <!-- <button *ngIf="cards[0].button">
           {{ cards[0].button }}<mat-icon>chevron_right</mat-icon>
         </button> -->
       </span>
     </article>
     <article mat-ripple (click)="editCard(1)">
-      <img [src]="cards[1]?.picture" [alt]="cards[1]?.title"/>
+      <img [src]="cards[1]?.picture ?? 'assets/resources/pictures/img-404-card.svg'" [alt]="cards[1]?.title"/>
       <span>
-        <h3>{{ cards[1]?.title }}</h3>
-        <p>{{ cards[1]?.desc }}</p>
+        <h3>{{ cards[1]?.title ?? "Titulo" }}</h3>
+        <p>{{ cards[1]?.desc ?? "Descripción"}}</p>
         <!-- <button *ngIf="cards[1].button">
           {{ cards[1].button }}<mat-icon>chevron_right</mat-icon>
         </button> -->
@@ -23,20 +23,20 @@
   </div>
   <div class="card-group" >
     <article mat-ripple (click)="editCard(2)">
-      <img [src]="cards[2]?.picture" [alt]="cards[2]?.title"/>
+      <img [src]="cards[2]?.picture ?? 'assets/resources/pictures/img-404-card.svg'" [alt]="cards[2]?.title"/>
       <span>
-        <h3>{{ cards[2]?.title }}</h3>
-        <p>{{ cards[2]?.desc }}</p>
+        <h3>{{ cards[2]?.title ?? "Titulo" }}</h3>
+        <p>{{ cards[2]?.desc ?? "Descripción"}}</p>
         <!-- <button *ngIf="cards[2].button">
           {{ cards[2].button }}<mat-icon>chevron_right</mat-icon>
         </button> -->
       </span>
     </article>
     <article mat-ripple (click)="editCard(3)">
-      <img [src]="cards[3]?.picture" [alt]="cards[3]?.title"/>
+      <img [src]="cards[3]?.picture ?? 'assets/resources/pictures/img-404-card.svg'" [alt]="cards[3]?.title"/>
       <span>
-        <h3>{{ cards[3]?.title }}</h3>
-        <p>{{ cards[3]?.desc }}</p>
+        <h3>{{ cards[3]?.title ?? "Titulo" }}</h3>
+        <p>{{ cards[3]?.desc ?? "Descripción"}}</p>
         <!-- <button *ngIf="cards[3].button">
           {{ cards[3].button }}<mat-icon>chevron_right</mat-icon>
         </button> -->
