--- a/src/app/views/pages/home/home.component.html
+++ b/src/app/views/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <app-hero [heroData]="heroData"></app-hero>
 <br>
 <div class="wrap-title">
-  <h3>Tecnologias aprendiendo actualmente</h3>
+  <h3>{{cardTitleSection}}</h3>
   <div class="pipe"></div>
 </div>
 <app-card [data]="cardData"></app-card>
