--- a/src/app/shared/hero/hero.component.scss
+++ b/src/app/shared/hero/hero.component.scss
@@ -3,7 +3,6 @@
   50% {transform: translateY(0px);}
   100% {opacity: 100%; }
 }
-
 .wrap-hero {
   width: 100%;
   height: fit-content;
@@ -12,7 +11,7 @@
   justify-content: center;
 
   .content {
-    width: fit-content;
+    width: 100%;
     display: flex;
     height: 100%;
     flex-direction: column;
@@ -24,12 +23,44 @@
       width: fit-content;
       margin-top: -10px;
     }
+
     img {
       height: 350px;
     }
 
+    .wrap-image{
+      width: 100%;
+      height: 300px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .solid-box{
+        width: 100%;
+        height: 50%;
+        background-color: var(--color-primary);
+        top: 0;
+        position: absolute;
+        .form{
+          display: none;
+        }
+      }
+
+      .image{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        position: absolute;
+        background-size: cover !important;
+        z-index: 2;
+      }
+
+    }
+
     span {
-      width: fit-content;
+      width: 100%;
       height: fit-content;
       gap: 15px;
       display: flex;
@@ -110,12 +141,12 @@
 @media only screen and (min-width: 1200px) {
   .wrap-hero {
     width: 100%;
-    height: 750px;
+    height: calc(100vh - 64px);
     display: flex;
     align-items: center;
 
     .content {
-      width: 90%;
+      width: 100%;
       height: 100%;
       display: flex;
       flex-direction: row-reverse;
@@ -132,6 +163,33 @@
         height: fit-content;
       }
 
+      .wrap-image{
+        width: 40vw;
+        height: 100%;
+        position: relative;
+
+        .solid-box{
+          width: 100%;
+          height: 100%;
+          background-color: var(--color-primary);
+          position: relative;
+          border-bottom-left-radius: 50px;
+
+          .form{
+            display: unset;
+          }
+        }
+
+        .image{
+          width: 450px;
+          height: 450px;
+          border: 10px solid var(--color-primary);
+          outline: 15px solid var(--body-surface);
+          left: -100px;
+        }
+
+      }
+
 
       span {
         width: fit-content;
@@ -139,6 +197,7 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+        margin-left: 100px;
         align-items: baseline;
 
         p,
@@ -166,7 +225,7 @@
   .wrap-hero {
     width: 100%;
     .content {
-      max-width: 1600px;
+      // max-width: 1600px;
       span {
         p,
         h1,
