--- a/src/app/views/pages/hability/hability.component.scss
+++ b/src/app/views/pages/hability/hability.component.scss
@@ -1,10 +1,26 @@
 .wrap-skills {
   width: 90%;
   margin: auto;
-  max-width: 1600px;
 
-  h2 {
-    color: var(--foreground-color);
+  .list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  .add-skill {
+    width: 100%;
+    height: 154px;
+    background-color: var(--card-login-back);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+
+    mat-icon {
+      transform: scale(2);
+    }
   }
 
   .wrap-skill-card {
@@ -13,11 +29,24 @@
     box-sizing: border-box;
     border-radius: 5px;
     background-color: var(--card-login-back);
-    border: 1px solid var(--card-login-back);
+    border: 2px solid var(--card-login-back);
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    flex-direction: row;
+    align-items: center;
+
+    gap: 30px;
     transition: all 0.2s;
+    position: relative;
+
+    .progress {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      span {
+        position: absolute;
+      }
+    }
 
     p {
       margin: 0;
@@ -25,16 +54,37 @@
     }
 
     .app-name {
-      font-size: 22px;
+      font-size: 25px;
       font-weight: 500;
     }
     .desc {
       line-height: 1.4;
+      opacity: 0.5;
     }
 
     &:hover {
-      border: 1px solid var(--color-primary);
+      border: 2px solid var(--color-primary);
       transition: all 0.2s;
+    }
+  }
+}
+
+@media screen and (min-width:940px) {
+  .wrap-skills {
+    max-width: 1600px;
+
+    .list {
+      flex-wrap: wrap;
+      flex-direction: row;
+    }
+
+    .add-skill {
+      width: 154px;
+      height: 154px;
+    }
+
+    .wrap-skill-card {
+      max-width: 420px;
     }
   }
 }
