Commit pre evaluation

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -61,7 +61,9 @@
       </div>
 
       <div class="wrap-logo">
-        <p class="logo-title">Diego <span>Carbone</span></p>
+        <!-- <p class="logo-title">Diego <span>Carbone</span></p> -->
+        <img height="28px" [src]="argentinaProgramaLogoUrl" alt="" />
+
       </div>
 
       <div class="wrap">
