--- a/src/app/views/pages/hability/hability.component.html
+++ b/src/app/views/pages/hability/hability.component.html
@@ -1,3 +1,6 @@
+<div class="spinner" *ngIf="!skills.length">
+  <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
+</div>
 <div class="wrap-skills">
   <br />
   <h2>Habilidades</h2>
