--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ body {
   margin: 0;
   transition: all 0.5s;
   font-family: 'Roboto', sans-serif;
+  background-color: var(--body-surface);
   // font-family: "Product Sans", sans-serif;
 }
 .mat-mdc-checkbox
