--- a/src/app/views/pages/hability/hability.component.scss
+++ b/src/app/views/pages/hability/hability.component.scss
@@ -1,3 +1,16 @@
+.spinner{
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  background-color: var(--body-surface);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .wrap-skills {
   width: 90%;
   margin: auto;
